Currently renders the Earth orbiting around a point light with a black background.

--- a/SolarSystem/source/Lesson4.2/Lesson4_2.vcxproj.filters
+++ b/SolarSystem/source/Lesson4.2/Lesson4_2.vcxproj.filters
@@ -16,6 +16,7 @@
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="AddressingModesDemo.cpp" />
     <ClCompile Include="pch.cpp" />
+    <ClCompile Include="..\Lesson3.3\pch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RenderingGame.h" />
