--- a/SolarSystem/source/Lesson5.4/Lesson5_4.vcxproj
+++ b/SolarSystem/source/Lesson5.4/Lesson5_4.vcxproj
@@ -222,6 +222,7 @@ IF EXIST "$(ProjectDir)content" xcopy /E /Y "$(ProjectDir)Content" "$(OutDir)Con
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CelestialBodies.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -233,6 +234,7 @@ IF EXIST "$(ProjectDir)content" xcopy /E /Y "$(ProjectDir)Content" "$(OutDir)Con
     <ClCompile Include="RenderingGame.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CelestialBodies.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PointLightDemo.h" />
     <ClInclude Include="RenderingGame.h" />
