--- a/SolarSystem/source/Lesson5.4/Lesson5_4.vcxproj.filters
+++ b/SolarSystem/source/Lesson5.4/Lesson5_4.vcxproj.filters
@@ -19,11 +19,13 @@
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="PointLightDemo.cpp" />
     <ClCompile Include="pch.cpp" />
+    <ClCompile Include="CelestialBodies.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RenderingGame.h" />
     <ClInclude Include="PointLightDemo.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="CelestialBodies.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\Models\PointLightProxy.obj.bin">
