Updated naming conventions

--- a/SolarSystem/source/Lesson5.4/Lesson5_4.vcxproj
+++ b/SolarSystem/source/Lesson5.4/Lesson5_4.vcxproj
@@ -229,14 +229,14 @@ IF EXIST "$(ProjectDir)content" xcopy /E /Y "$(ProjectDir)Content" "$(OutDir)Con
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="PointLightDemo.cpp" />
+    <ClCompile Include="SolarSystem.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="RenderingGame.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CelestialBodies.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="PointLightDemo.h" />
+    <ClInclude Include="SolarSystem.h" />
     <ClInclude Include="RenderingGame.h" />
   </ItemGroup>
   <ItemGroup>
